index.css
.mainPageTitle {
    color: aliceblue;
    display: inline-block;
}

blockquote {
    margin : 40px
}
blockquote hr {
    color: white;
    width: 25%;
    margin: 0px;
    margin-top: 10px;
}
body {
    margin: 0px;
}
main {
    color: white;
    background : rgb(18, 79, 135);
    margin: 0px;   
}

header {
    background: linear-gradient(to top, rgba(35, 97, 155, 1), rgba(35, 97, 155, 0.6));
    display: flex;
    min-height: 60px;
    align-items: center;
    justify-content: space-between;
    color: white;
    padding-right: 15px;
}

footer {
    color: white;
    background :linear-gradient(to bottom, rgba(35, 97, 155, 1), rgba(35, 97, 155, 0.6));
    margin: 0px;
    padding: 40px;
}

footer div {
    display: flex;
    justify-content: space-around;
    gap: 100px;
}

.esetTDM {
    margin-top: 40px;
    text-align: center;
    display: block;
}

.selected {
    padding: 10px;
    opacity: 0.4;
}

.teamName {
    font-weight: bolder;
}

.imgEcam {
    width: 100%;
    height: 400px;
    border: none;
    margin: 0px;
}

.logoESCLink {
    margin: 0;
    padding: 0;
}

.logoESC {
    width: 25%;
    transition: 1.5s;
    margin: 0;
    border: none;
    display: block;
    min-height: 30px;
    min-width: 30px;
}

.logoESC:hover {
    opacity: 0.6;
}


a {
    text-decoration: none;
    color: inherit;
    transition: 1.5s;
}

nav {
    display: flex;
    justify-content: space-between;
    gap: 30px;
}

nav a {
    color: white;
    font-weight: bold;
}

nav a:hover {
    text-decoration: none;
    padding-right: 20px;
    padding-left: 20px;
    opacity: 0.4;
}

#copyright::after {
    content: "\0000A9";
    margin-left: 5px;
    margin-bottom: 5px;
}

